# rudra512

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  Rudra512.cpp  SECURITY.md  Version 1.0.0  becnhmark.py  comparison.cpp  index.html  pyproject.toml  rudra512_tests.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bindings/js/: .npmignore  README.md  binding.gyp  cli.js  index.js  package.json  rudra.cpp  test.js
bindings/python/: README.md  bindings.cpp
bindings/python/rudra512/: __init__.py  cli.py
cli/: main.cpp
core/include/: rudra512.h
core/src/: rudra512.cpp
