[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "rudra-512-hash"
version = "3.0.0"
description = "Rudra-512: A high-performance 512-bit cryptographic hash function with strong avalanche properties."
readme = "bindings/python/README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ayush Anand", email = "developerayushanand@gmail.com" },
  { email = "developerayushanand@gmail.com" }
]

maintainers = [
  { name = "Ayush Anand", email = "developerayushanand@gmail.com" },
  { email = "developerayushanand@gmail.com" }
]

keywords = [
    "hash",
    "cryptography",
    "security",
    "hashing",
    "sha",
    "blake",
    "rudra512"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent"
]

requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Developer-Ayush/rudra512"
Repository = "https://github.com/Developer-Ayush/rudra512"
Issues = "https://github.com/Developer-Ayush/rudra512/issues"

[project.scripts]
rudra = "rudra512.cli:main"

# -------------------------
# SCikit-build config
# -------------------------
[tool.scikit-build]
wheel.packages = ["bindings/python/rudra512"]

[tool.scikit-build.install]
components = ["python"]
