[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "rudra-512-hash"
version = "11.10.11"
description = "RUDRA512: A 512-bit cryptographic hash function for research and experimental analysis."
readme = "bindings/python/README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ayush Anand", email = "developerayushanand@gmail.com" }
]

maintainers = [
  { name = "Ayush Anand", email = "developerayushanand@gmail.com" }
]

keywords = [
    "cryptographic hash function",
    "ARX",
    "tokenisation",
    "input scattering",
    "rudra512"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Developer-Ayush/rudra512"
Repository = "https://github.com/Developer-Ayush/rudra512"
Issues = "https://github.com/Developer-Ayush/rudra512/issues"

[project.scripts]
rudra = "rudra512.cli:main"

# -------------------------
# SCikit-build config
# -------------------------
[tool.scikit-build]
wheel.packages = ["bindings/python/rudra512"]

[tool.scikit-build.install]
components = ["python"]
